# tuenti_challenge_2013-1

./: README.md
problem01/: CMakeLists.txt
problem01/src/: problem1.cc  profiter.cc  profiter.h  profiter_test.cc
problem02/: CMakeLists.txt
problem02/src/: problem2.cc  suggester.cc  suggester.h  suggester_test.cc
problem03/: CMakeLists.txt
problem03/src/: finder.cc  finder.h  finder_test.cc  problem3.cc
problem04/: CMakeLists.txt
problem04/src/: grinder.cc  grinder.h  grinder_test.cc  problem4.cc
problem05/: CMakeLists.txt
problem05/src/: crawler.cc  crawler.h  crawler_test.cc  problem5.cc
problem06/: CMakeLists.txt
problem06/src/: mazer.cc  mazer.h  mazer_test.cc  problem6.cc
problem07/: CMakeLists.txt
problem07/src/: boozzler.cc  boozzler.h  boozzler_test.cc  problem7.cc
problem08/: php_is_crap.sh
problem09/: CMakeLists.txt
problem09/src/: kerrigan.cc  kerrigan.h  kerrigan_test.cc  problem9.cc
problem10/: spammer.sh
problem12/: radio.sh
problem13/: CMakeLists.txt
problem13/src/: problem13.cc  randomer.cc  randomer.h  randomer_test.cc
problem14/: baa.py  quotes
problem15/: board.php  game.php  joshua.php  piece.php
problem15/interfaces/: board.php  game.php  piece.php
problem16/: CMakeLists.txt
problem16/src/: problem16.cc  turinger.cc  turinger.h  turinger_test.cc
problem17/: CMakeLists.txt  solver.py
problem17/src/: problem17.cc
problem18/: CMakeLists.txt  problem_definition
problem18/src/: problem18.cc
problem19/: solve.py
problem19/android/SlonWifi/: .classpath  .project  AndroidManifest.xml  build.xml
problem19/android/SlonWifi/res/layout/: activity_main.xml
problem19/android/SlonWifi/src/org/slon/wifi/: MainActivity.java  TuentiReceiver.java
problem20/: alien.asm  solver.py
